added estimated time in tooltip

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -37,6 +37,12 @@
     <script src="bower_components/angular-messages/angular-messages.js"></script>
     <script src="bower_components/angular-material/angular-material.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="bower_components/fs-angular-math/dist/math.js"></script>
+    <script src="bower_components/fs-angular-util/dist/util.js"></script>
+    <script src="bower_components/fs-angular-format/dist/format.js"></script>
+    <script src="bower_components/moment/moment.js"></script>
+    <script src="bower_components/moment-timezone/builds/moment-timezone-with-data-2010-2020.js"></script>
+    <script src="bower_components/fs-angular-date/dist/date.js"></script>
     <script src="bower_components/ng-file-upload/ng-file-upload.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
