better error reporting

--- a/src/app/views/demo.html
+++ b/src/app/views/demo.html
@@ -1,1 +1,3 @@
 <div class="md-button " ngf-select="upload($files)" ngf-multiple="true">Upload on file select</div>
+<div class="md-button " ngf-select="upload($files,true)" ngf-multiple="true">Upload on file select (Fail)</div>
+<div class="md-button " ngf-select="upload($files,false,5)" ngf-multiple="true">Upload on file select (5 second delay)</div>
