--- a/src/app/views/directives/uploadstatus.html
+++ b/src/app/views/directives/uploadstatus.html
@@ -1,9 +1,9 @@
 <div class="dialog" ng-show="opened">
 	<div class="header" layout="row" layout-align="start center">
 		<div flex>
-			<span ng-if="status.uploading">Uploading {{status.uploading}} <ng-pluralize count="status.uploading" when="{ 'one': 'file', 'other': 'files' }"></ng-pluralize></span>
-			<span ng-if="!status.uploading && status.completed">Uploaded {{status.completed}} <ng-pluralize count="status.completed" when="{ 'one': 'file', 'other': 'files' }"></ng-pluralize><span ng-if="!status.uploading && status.error">,</span></span>
-			<span ng-if="!status.uploading && status.error">{{status.error}} <ng-pluralize count="status.error" when="{ 'one': 'upload', 'other': 'uploads' }"></ng-pluralize> failed</span>
+			<span ng-if="status.uploading">Uploading&nbsp;{{status.uploading}}&nbsp;<ng-pluralize count="status.uploading" when="{ 'one': 'file', 'other': 'files' }"></ng-pluralize></span>
+			<span ng-if="!status.uploading && status.completed">Uploaded&nbsp;{{status.completed}}&nbsp;<ng-pluralize count="status.completed" when="{ 'one': 'file', 'other': 'files' }"></ng-pluralize><span ng-if="!status.uploading && status.error">,</span></span>
+			<span ng-if="!status.uploading && status.error">{{status.error}}&nbsp;<ng-pluralize count="status.error" when="{ 'one': 'upload', 'other': 'uploads' }"></ng-pluralize>&nbsp;failed</span>
 		</div>
 		<a href ng-click="close()"><md-icon>clear</md-icon></a>
 	</div>
