--- a/src/app/views/directives/uploadstatus.html
+++ b/src/app/views/directives/uploadstatus.html
@@ -2,8 +2,9 @@
 	<div class="header" layout="row" layout-align="start center">
 		<div flex>
 			<span ng-if="status.uploading">Uploading&nbsp;{{status.uploading}}&nbsp;<ng-pluralize count="status.uploading" when="{ 'one': 'file', 'other': 'files' }"></ng-pluralize></span>
-			<span ng-if="!status.uploading && status.completed">Uploaded&nbsp;{{status.completed}}&nbsp;<ng-pluralize count="status.completed" when="{ 'one': 'file', 'other': 'files' }"></ng-pluralize><span ng-if="!status.uploading && status.error">,</span></span>
-			<span ng-if="!status.uploading && status.error">{{status.error}}&nbsp;<ng-pluralize count="status.error" when="{ 'one': 'upload', 'other': 'uploads' }"></ng-pluralize>&nbsp;failed</span>
+			<span ng-if="status.processing">Processing&nbsp;{{status.processing}}&nbsp;<ng-pluralize count="status.processing" when="{ 'one': 'file', 'other': 'files' }"></ng-pluralize></span>
+			<span ng-if="!status.uploading && !status.processing && status.completed">Uploaded&nbsp;{{status.completed}}&nbsp;<ng-pluralize count="status.completed" when="{ 'one': 'file', 'other': 'files' }"></ng-pluralize><span ng-if="!status.uploading && status.error">,</span></span>
+			<span ng-if="!status.uploading && !status.processing && status.error">{{status.error}}&nbsp;<ng-pluralize count="status.error" when="{ 'one': 'upload', 'other': 'uploads' }"></ng-pluralize>&nbsp;failed</span>
 		</div>
 		<a href ng-click="close()"><md-icon>clear</md-icon></a>
 	</div>
@@ -12,17 +13,24 @@
 			<tbody class="process" ng-repeat="process in processes">
 				<tr ng-repeat="file in process.files">
 					<td class="file" ng-class="{ error: process.status=='error', 'has-message': !!process.message }">
-						<span class="file-name">{{file.name}}</span>
-						<span class="error-message">{{process.message}}</span>
+						<div class="wrap">
+							<div class="file-name">{{file.name}}</div>
+							<div class="error-message" ng-if="process.message">{{process.message}}</div>
+							<div class="more">
+								<div ng-if="process.status=='uploading'">{{process.loaded}}/{{process.total}}, {{process.estimated}} left</div>
+								<div ng-if="process.status=='processing'">Processing...</div>
+							</div>
+						</div>
 					</td>
 					<td class="status">
-						<md-icon class="completed" ng-show="process.status=='completed'">check_circle</md-icon>
-						<md-icon class="error" ng-show="process.status=='error'">error</md-icon>
-						<md-tooltip ng-show="process.message && (process.status=='error' || process.status=='uploading')">
-							<span ng-show="process.status=='error'">{{process.message}}</span>
-							<span ng-show="process.status=='uploading'">{{process.estimated}} remaining</span>
+						<md-icon class="completed" ng-if="process.status=='completed'">check_circle</md-icon>
+						<md-icon class="error" ng-if="process.status=='error'">error</md-icon>
+						<md-tooltip ng-if="process.status=='uploading' || process.status=='processing'">
+							<span ng-if="process.status=='processing'">Processing</span>
+							<span ng-if="process.status=='uploading'">Uploading</span>
 						</md-tooltip>
-						<md-progress-circular ng-show="process.status=='uploading'" md-mode="determinate" value="{{process.percent}}" md-diameter="24"></md-progress-circular>
+						<md-progress-circular ng-if="process.status=='uploading'" md-mode="determinate" value="{{process.percent}}" md-diameter="24"></md-progress-circular>
+						<md-progress-circular ng-if="process.status=='processing'" md-mode="indeterminate" md-diameter="24"></md-progress-circular>
 					</td>
 				</tr>
 			</tbody>
