--- a/src/app/index.html
+++ b/src/app/index.html
@@ -10,6 +10,7 @@
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/angular-material/angular-material.css" />
+    <link rel="stylesheet" href="bower_components/fs-angular-dock/dist/dock.css" />
     <link rel="stylesheet" href="bower_components/fs-boilerplate-styles/dist/main.css" />
     <!-- endbower -->
     <!-- endbuild -->
@@ -43,6 +44,7 @@
     <script src="bower_components/moment/moment.js"></script>
     <script src="bower_components/moment-timezone/builds/moment-timezone-with-data-2012-2022.js"></script>
     <script src="bower_components/fs-angular-date/dist/date.js"></script>
+    <script src="bower_components/fs-angular-dock/dist/dock.js"></script>
     <script src="bower_components/ng-file-upload/ng-file-upload.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
